# EmailAgent

./: .gitignore  README.md  pyproject.toml  setup.py
EmailAgent/: __init__.py  agent.py
